--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/ae/languages/en.yml
@@ -18,6 +18,8 @@ variables:
   language_promotional_filter: ''
   add_to_cart_link: 'add to basket'
   create_account: 'create an account'
+  spc_search_byname: 'Suit trousers'
+  spc_search_byID: 'HMAESSE'
   sign_in: 'Sign in'
   find_store: 'Find Store'
   language_link: 'العربية'
