--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/kw/languages/en.yml
@@ -19,6 +19,8 @@ variables:
   add_to_cart_link: 'add to basket'
   language_add_to_cart_link: 'أضف إلى حقيبة التسوق'
   ar_collection_filter: ''
+  spc_search_byname: 'Suit trousers'
+  spc_search_byID: 'HMKWHDA'
   ar_sort_filter: 'رتب حسب'
   ar_price_filter: 'السعر'
   ar_brand_filter: ''
