--- a/tests/behat/templates/variables/brands/mc/env/uat/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/mc/env/uat/markets/ae/languages/en.yml
@@ -18,6 +18,7 @@ variables:
   language_promotional_filter: ''
   language_add_to_cart_link: 'أضف إلى سلة التسوق'
   add_to_cart_link: 'add to basket'
+  spc_search_byname: ''
   create_account: 'create an account'
   sign_in: 'Sign in'
   find_store: 'Find Store'
