--- a/tests/behat/templates/variables/brands/pb/env/uat/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/pb/env/uat/markets/ae/languages/en.yml
@@ -21,6 +21,8 @@ variables:
   language_brand_filter: ''
   language_color_filter: ''
   language_size_filter: ''
+  spc_search_byname: 'Honeycomb'
+  spc_search_byID: 'PBAEHDE'
   language_filters: ''
   language_promotional_filter: 'المميزات'
   language_add_to_cart_link: 'أضف إلى سلة التسوق'
