--- a/tests/behat/templates/variables/brands/pb/env/uat/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/pb/env/uat/markets/kw/languages/en.yml
@@ -15,6 +15,7 @@ variables:
   add_to_cart_link: 'add to cart'
   vat: ''
   checkout_link: 'continue to checkout'
+  spc_search_byname: ''
   language_collection_filter: ''
   language_sort_filter: 'رتب حسب'
   language_price_filter: 'السعر'
