--- a/tests/behat/templates/variables/brands/pb/env/uat/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/pb/env/uat/markets/sa/languages/en.yml
@@ -16,6 +16,8 @@ variables:
   vat: ''
   city_option: 'Abu Arish'
   area_option: 'Abu Arish'
+  spc_search_byname: 'Raylan'
+  spc_search_byID: 'PBSASSA000'
   language_city_option: 'ابو عريش'
   language_area_option: 'ابو عريش'
   checkout_link: 'continue to checkout'
