CORE-30822: Fixed PROD Issues.

--- a/tests/behat/templates/variables/brands/fl/env/prod/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/fl/env/prod/markets/sa/languages/en.yml
@@ -16,8 +16,8 @@ variables:
   language_size_filter: 'مقاس الحذاء'
   language_filters: 'جميع اختياراتك'
   language_promotional_filter: 'الجنس'
-  language_add_to_cart_link: 'أضف إلى حقيبة التسوق'
-  add_to_cart_link: 'add to basket'
+  language_add_to_cart_link: 'add-to-cart-main'
+  add_to_cart_link: 'add-to-cart-main'
   empty_bag: 'Your shopping bag is empty'
   language_empty_bag: 'حقيبة التسوق الخاصة بك فارغة'
   ar_collection_filter: ''
