--- a/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/languages/en.yml
@@ -21,7 +21,7 @@ variables:
   sign_in: 'Sign In'
   find_store: 'Find A Store'
   language_link: 'العربية'
-  add_to_cart_link: 'add to basket'
+  add_to_cart_link: 'add-to-cart-main'
   subtotal: 'Subtotal'
   order_total: 'Order Total'
   order_summary: 'Order Summary'
@@ -33,7 +33,7 @@ variables:
   language_sign_in: 'تسجيل الدخول'
   language_find_store: 'البحث عن محلاتنا'
   second_language_link: 'English'
-  language_add_to_cart_link: 'أضف إلى حقيبة التسوق'
+  language_add_to_cart_link: 'add-to-cart-main'
   language_subtotal: 'المبلغ'
   language_order_total: 'المبلغ الإجمالي للطلبية'
   language_order_summary: 'ملخص الطلبية'
