--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/ae/languages/en.yml
@@ -16,8 +16,8 @@ variables:
   language_size_filter: ''
   language_filters: 'جميع اختياراتك'
   language_promotional_filter: ''
-  language_add_to_cart_link: 'أضف إلى سلة التسوق'
-  add_to_cart_link: 'add to basket'
+  language_add_to_cart_link: 'add-to-cart-main'
+  add_to_cart_link: 'add-to-cart-main'
   create_account: 'create an account'
   empty_bag: 'Your shopping bag is empty'
   language_empty_bag: 'حقيبة التسوق الخاصة بك فارغة'
