--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/kw/languages/en.yml
@@ -26,8 +26,8 @@ variables:
   ar_size_filter: 'Size'
   ar_filters: 'all filters'
   spc_search_keyword: 'mothercare'
-  add_to_cart_link: 'add to basket'
-  language_add_to_cart_link: 'أضف إلى سلة التسوق'
+  add_to_cart_link: 'add-to-cart-main'
+  language_add_to_cart_link: 'add-to-cart-main'
   create_account: 'create an account'
   sign_in: 'Sign in'
   find_store: 'Find Store'
