--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/languages/en.yml
@@ -27,10 +27,10 @@ variables:
   ar_filters: 'all filters'
   empty_bag: 'Your shopping bag is empty'
   language_empty_bag: 'حقيبة التسوق الخاصة بك فارغة'
-  language_add_to_cart_link: 'أضف إلى سلة التسوق'
+  language_add_to_cart_link: 'add-to-cart-main'
   continue_shopping: 'Here are some of our favorites'
   language_continue_shopping: 'إليك منتجاتنا المفضلة'
-  add_to_cart_link: 'add to basket'
+  add_to_cart_link: 'add-to-cart-main'
   create_account: 'create an account'
   sign_in: 'Sign in'
   find_store: 'Find Store'
