CORE-21756-PROD-issues-Fixes.

--- a/tests/behat/templates/variables/brands/fl/env/prod/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/fl/env/prod/markets/kw/languages/en.yml
@@ -18,6 +18,8 @@ variables:
   language_promotional_filter: 'الجنس'
   add_to_cart_link: 'add-to-cart-main'
   language_add_to_cart_link: 'add-to-cart-main'
+  np_plp_store: 'Salmiya'
+  np_plp_language_store: 'السالمية، الكويت‎'
   ar_collection_filter: ''
   ar_sort_filter: 'رتب حسب'
   ar_price_filter: 'السعر'
