CORE-31448: Updated the changes in yml files.

--- a/tests/behat/templates/variables/brands/tbs/languages/en.yml
+++ b/tests/behat/templates/variables/brands/tbs/languages/en.yml
@@ -1,15 +1,14 @@
 variables:
-  lang_product_url: '/en-hm/product/1'
   lang_breadcrumb_examples:
     1:
       - page
       - breadcrumb
     2:
-      - '/ladies'
-      - 'Home > Ladies'
+      - '/shop-face'
+      - 'Home > Face'
     3:
-      - '/ladies/new-arrivals/clothes'
-      - 'Home > Ladies > New Arrivals > Clothes'
-    5:
+      - '/shop-face-masks/--vegan-yes_0/'
+      - 'Home > Face > Face masks > Vegan'
+    4:
       - '/cart'
       - 'Home > Basket'
