--- a/tests/behat/templates/variables/brands/tbs/env/uat/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/uat/markets/kw/languages/en.yml
@@ -2,7 +2,6 @@ variables:
   url_base_uri: 'https://tbskw2-uat.factory.alshaya.com/en'
   collection_filter: 'Collection'
   sort_filter: 'Sort'
-  price_filter: ''
   brand_filter: 'Product Type'
   color_filter: 'Fragrance Category'
   size_filter: 'Fragrance Name'
@@ -10,7 +9,6 @@ variables:
   promotional_filter: ''
   language_collection_filter: 'نوع المنتج'
   language_sort_filter: 'رتبي حسب'
-  language_price_filter: ''
   language_brand_filter: 'المجموعة'
   language_color_filter: 'فئة العطر'
   language_size_filter: 'اسم العطر'
@@ -20,12 +18,8 @@ variables:
   spc_search_byname: 'Shampoo'
   spc_search_byID: 'TBKWHDE'
   language_empty_bag: 'حقيبة التسوق الخاصة بك فارغة'
-  ar_collection_filter: ''
   ar_sort_filter: 'رتب حسب'
   ar_price_filter: 'السعر'
-  ar_brand_filter: ''
-  ar_color_filter: ''
-  ar_promotional_filter: ''
   ar_size_filter: 'Size'
   ar_filters: 'all filters'
   create_account: 'create an account'
@@ -47,8 +41,6 @@ variables:
   language_order_summary: 'ملخص الطلبية'
   language_promo_code: 'هل لديك رمز عرض ؟'
   language_excluding_delivery: 'قبل التوصيل'
-  vat: ''
-  language_vat: ''
   language_checkout_link: 'إتمام الشراء بأمان'
   continue_shopping: 'Here are some of our favorites'
   language_continue_shopping: 'إليك منتجاتنا المفضلة'
@@ -60,8 +52,6 @@ variables:
   building: 'Building B'
   locality: 'Block N'
   floor: 'Floor C'
-  landmark: ''
-  postal_code: ''
   mobile: '55667788'
   store_area: 'Mubarak Al Kabeer Coop'
   language_city_option: 'Ahmadi'
@@ -79,7 +69,6 @@ variables:
   language_order_confirm_text: 'تأكيد الطلبية'
   language_delivery_type: 'خدمة التوصيل للمنزل'
   language_payment_type: ''
-  cart_promotional: ''
   cs_payment_type: 'Credit Card/Debit Card'
   cnc_delivery_type: 'Click and Collect'
   language_cnc_delivery_type: 'Click and Collect'
@@ -92,21 +81,12 @@ variables:
   language_delivery_type_text: 'نوع التوصيل:'
   language_payment_type_text: 'طريقة الدفع:'
   language_store_area: 'جمعية مبارك الكبير التعاونية'
-  language_billing_city_option: ''
-  billing_city_option: ''
   billing_street: 'St. Santa Marlo'
   billing_building: 'Broadway'
   billing_locality: 'Block N'
   billing_floor: '5th Floor'
-  billing_landmark: ''
-  billing_postal_code: ''
   billing_mobile: '556677888'
   billing_text: 'Billing address:'
-  language_add_to_cart_link: 'add to bag'
-  add_to_cart_link: 'add to bag'
   governorate: 'Ahmadi'
-  spc_search_keyword: 'fragrance'
-  filter_1: 'attr_collection_1'
-  filter_2: 'attr_fragrance_name'
-  filter_3: 'attr_fragrance_category'
+  spc_search_keyword: 'shampoo'
 
