--- a/tests/behat/templates/variables/brands/tbs/env/uat/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/uat/markets/kw/languages/en.yml
@@ -63,7 +63,7 @@ variables:
   payment_type: ''
   payment_type_text: 'payment method:'
   spc_knet_option: 'Knet Test Card [KNET1]'
-  language_spc_knet_option: 'عيديتي [KNET]'
+  language_spc_knet_option: 'بنك اختبار كنيت [KNET1]'
   continue_shopping_text: 'continue shopping'
   language_continue_shopping_text: 'تابع التسوق'
   language_order_confirm_text: 'تأكيد الطلبية'
@@ -89,4 +89,3 @@ variables:
   billing_text: 'Billing address:'
   governorate: 'Ahmadi'
   spc_search_keyword: 'shampoo'
-
