--- a/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/languages/en.yml
@@ -18,6 +18,8 @@ variables:
   language_promotional_filter: ''
   spc_search_keyword: 'nike'
   create_account: 'Create An Account'
+  np_plp_store: 'Dubai - United Arab Emirates'
+  np_plp_language_store: 'دبي - الإمارات العربية المتحدة'
   sign_in: 'Sign In'
   find_store: 'Find A Store'
   language_link: 'العربية'
