--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/ae/languages/en.yml
@@ -17,6 +17,8 @@ variables:
   language_filters: 'جميع اختياراتك'
   language_promotional_filter: ''
   language_add_to_cart_link: 'add-to-cart-main'
+  np_plp_store: 'Dubai - United Arab Emirates'
+  np_plp_language_store: 'دبي - الإمارات العربية المتحدة'
   add_to_cart_link: 'add-to-cart-main'
   create_account: 'create an account'
   empty_bag: 'Your shopping bag is empty'
