--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/languages/en.yml
@@ -22,6 +22,8 @@ variables:
   ar_brand_filter: ''
   ar_color_filter: ''
   ar_promotional_filter: 'Promotions'
+  np_plp_store: 'Jeddah Saudi Arabia'
+  np_plp_language_store: 'جدة السعودية‎'
   spc_search_keyword: 'mothercare'
   ar_size_filter: 'Size'
   ar_filters: 'all filters'
