--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/languages/en.yml
@@ -22,8 +22,8 @@ variables:
   ar_brand_filter: ''
   ar_color_filter: ''
   ar_promotional_filter: 'Promotions'
-  np_plp_store: 'Jeddah Saudi Arabia'
-  np_plp_language_store: 'جدة السعودية‎'
+  np_plp_store: 'LPM Restaurant & Café, No. 38, Riyadh Saudi Arabia'
+  np_plp_language_store: 'KING FAHD ROAD STREET, رقم 38، العليا، الرياض 12212، السعودية'
   spc_search_keyword: 'mothercare'
   ar_size_filter: 'Size'
   ar_filters: 'all filters'
