--- a/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/languages/en.yml
@@ -23,7 +23,7 @@ variables:
   ar_filters: 'all filters'
   create_account: 'create an account'
   sign_in: 'Sign in'
-  find_store: 'Find a Store'
+  find_store: 'Find Store'
   language_link: 'عربية'
   subtotal: 'Subtotal'
   order_total: 'Order Total'
@@ -54,7 +54,7 @@ variables:
   mobile: '55667788'
   store_area: 'Mubarak Al Kabeer Coop'
   language_city_option: 'Ahmadi'
-  language_area_option: 'ابو حليفه'
+  language_area_option: 'أم الهيمان'
   order_confirm_text: 'Order Confirmation'
   order_detail: 'order detail'
   delivery_type: 'Home delivery'
@@ -87,4 +87,4 @@ variables:
   billing_mobile: '556677888'
   billing_text: 'Billing address:'
   governorate: 'Ahmadi'
-  spc_search_keyword: 'shampoo'
+  spc_search_keyword: 'cream'
