CORE-31840: Classic-PDP-Page.

--- a/tests/behat/templates/variables/brands/bbw/env/prod/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/prod/markets/sa/languages/en.yml
@@ -15,6 +15,8 @@ variables:
   language_size_filter: 'فئة العطر'
   language_promotional_filter: ''
   filters: ''
+  np_plp_store: 'Abu Dhabi - United Arab Emirates'
+  np_plp_language_store: 'أبو ظبي'
   empty_bag: 'Your shopping bag is empty'
   language_empty_bag: 'حقيبة التسوق الخاصة بك فارغة.'
   ar_collection_filter: ''
