--- a/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/languages/en.yml
@@ -19,6 +19,8 @@ variables:
   create_account: 'create an account'
   spc_search_byname: 'Sweet'
   spc_search_byID: 'BWAEHDE'
+  np_plp_store: 'Abu Dhabi - United Arab Emirates'
+  np_plp_language_store: 'أبو ظبي'
   sign_in: 'Sign in'
   find_store: 'Find Store'
   language_link: 'العربية'
