--- a/tests/behat/templates/variables/brands/bbw/env/prod/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/prod/markets/ae/languages/en.yml
@@ -16,6 +16,8 @@ variables:
   language_promotional_filter: ''
   filters: 'all filters'
   spc_search_keyword: 'candle'
+  np_plp_store: 'Abu Dhabi - United Arab Emirates'
+  np_plp_language_store: 'أبو ظبي'
   language_filters: 'جميع اختياراتك'
   create_account: 'create an account'
   sign_in: 'Sign in'
