--- a/tests/behat/templates/variables/brands/bbw/env/prod/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/prod/markets/kw/languages/en.yml
@@ -15,6 +15,8 @@ variables:
   language_size_filter: 'فئة العطر'
   language_promotional_filter: 'العروض'
   filters: ''
+  np_plp_store: 'Abu Dhabi - United Arab Emirates'
+  np_plp_language_store: 'أبو ظبي'
   ar_collection_filter: ''
   ar_sort_filter: 'رتب حسب'
   ar_price_filter: 'السعر'
