--- a/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/languages/en.yml
@@ -20,6 +20,8 @@ variables:
   create_account: 'create an account'
   sign_in: 'Sign in'
   find_store: 'Find A Store'
+  np_plp_store: 'Abu Dhabi - United Arab Emirates'
+  np_plp_language_store: 'أبو ظبي'
   language_link: 'العربية'
   subtotal: 'Subtotal'
   spc_search_keyword: 'wood'
