--- a/tests/behat/templates/variables/brands/pb/env/prod/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/pb/env/prod/markets/sa/languages/en.yml
@@ -17,6 +17,8 @@ variables:
   language_filters: ''
   language_promotional_filter: ''
   add_to_cart_link: 'add to cart'
+  np_plp_store: 'Abu Dhabi - United Arab Emirates'
+  np_plp_language_store: 'أبو ظبي'
   language_add_to_cart_link: 'أضف إلى سلة التسوق'
   ar_collection_filter: ''
   ar_sort_filter: 'رتب حسب'
