CORE-31884: Footer-feature-added.

--- a/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/languages/ar.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/languages/ar.yml
@@ -1,5 +1,5 @@
 variables:
-  url_base_uri: 'https://tbskw2.factory.alshaya.com/en'
+  url_base_uri: 'https://www.thebodyshop.com.kw/ar/'
   create_account: 'تسجيل مستخدم جديد'
   sign_in: 'تسجيل الدخول'
   find_store: 'البحث عن محلاتنا'
