--- a/tests/behat/templates/variables/brands/hm/env/prod/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/hm/env/prod/markets/kw/languages/en.yml
@@ -19,8 +19,8 @@ variables:
   language_filters: 'جميع اختياراتك'
   language_promotional_filter: 'التنزيلات'
   add_to_cart_link: 'add to basket'
-  np_plp_store: 'Abu Dhabi - United Arab Emirates'
-  np_plp_language_store: 'أبو ظبي'
+  np_plp_store: 'Ardiya, Kuwait'
+  np_plp_language_store: 'العارضية ، الكويت'
   language_spc_knet_option: 'عيديتي [KNET]'
   language_add_to_cart_link: 'أضف إلى حقيبة التسوق'
   ar_collection_filter: ''
