--- a/tests/behat/templates/variables/brands/hm/env/prod/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/hm/env/prod/markets/sa/languages/en.yml
@@ -18,8 +18,8 @@ variables:
   language_promotional_filter: 'التنزيلات'
   language_add_to_cart_link: 'أضف إلى حقيبة التسوق'
   add_to_cart_link: 'add to basket'
-  np_plp_store: 'Abu Dhabi - United Arab Emirates'
-  np_plp_language_store: 'أبو ظبي'
+  np_plp_store: 'Abha Saudi Arabia'
+  np_plp_language_store: 'Abha السعودية'
   ar_collection_filter: ''
   ar_sort_filter: 'رتب حسب'
   ar_price_filter: 'السعر'
