--- a/tests/behat/templates/variables/brands/pb/env/prod/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/pb/env/prod/markets/kw/languages/en.yml
@@ -22,8 +22,8 @@ variables:
   ar_brand_filter: ''
   ar_color_filter: ''
   ar_promotional_filter: 'Promotions'
-  np_plp_store: 'Abu Dhabi - United Arab Emirates'
-  np_plp_language_store: 'أبو ظبي'
+  np_plp_store: 'Ardiya, Kuwait'
+  np_plp_language_store: 'Ardiya, الكويت'
   language_spc_knet_option: 'عيديتي [KNET]'
   ar_size_filter: 'Size'
   spc_search_keyword: 'wood'
