--- a/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/languages/en.yml
@@ -21,7 +21,7 @@ variables:
   np_plp_store: 'Dubai - United Arab Emirates'
   np_plp_language_store: 'دبي - الإمارات العربية المتحدة'
   sign_in: 'Sign In'
-  find_store: 'Find A Store'
+  find_store: 'Find a Store'
   language_link: 'العربية'
   add_to_cart_link: 'add-to-cart-main'
   subtotal: 'Subtotal'
