--- a/tests/behat/templates/variables/brands/hm/env/prod/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/hm/env/prod/markets/ae/languages/en.yml
@@ -19,7 +19,7 @@ variables:
   add_to_cart_link: 'add to basket'
   create_account: 'create an account'
   np_plp_store: 'Abu Dhabi - United Arab Emirates'
-  np_plp_language_store: 'أبو ظبي'
+  np_plp_language_store: 'ابوظبي، الامارات العربية المتحدة'
   sign_in: 'Sign in'
   spc_search_keyword: 'dress'
   find_store: 'Find Store'
