--- a/tests/behat/templates/variables/brands/vs/env/prod/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/vs/env/prod/markets/ae/languages/en.yml
@@ -21,7 +21,7 @@ variables:
   np_plp_store: 'Abu Dhabi - United Arab Emirates'
   np_plp_language_store: 'أبو ظبي'
   sign_in: 'Sign In'
-  find_store: 'Find A Store'
+  find_store: 'Find a Store'
   language_link: 'العربية'
   subtotal: 'Subtotal'
   spc_search_keyword: 'body'
@@ -66,7 +66,7 @@ variables:
   language_payment_type: 'نقداً عند التوصيل'
   language_area_option: 'أم الشيف'
   language_city_option: 'دبي'
-  cart_promotional: ''
+  cart_promotional: '25'
   cs_payment_type: 'Credit Card/Debit Card'
   cnc_delivery_type: 'Click and Collect'
   language_cnc_delivery_type: 'Click and Collect'
