--- a/tests/behat/templates/variables/brands/vs/env/prod/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/vs/env/prod/markets/sa/languages/en.yml
@@ -75,7 +75,7 @@ variables:
   language_order_confirm_text: 'تأكيد الطلبية'
   language_delivery_type: 'خدمة التوصيل للمنزل'
   language_payment_type: 'نقداً عند التوصيل'
-  cart_promotional: ''
+  cart_promotional: '125'
   cs_payment_type: 'Credit Card/Debit Card'
   cnc_delivery_type: 'Click and Collect'
   language_cnc_delivery_type: 'Click and Collect'
