--- a/tests/behat/templates/variables/brands/aeo/env/uat/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/aeo/env/uat/markets/ae/languages/en.yml
@@ -15,6 +15,8 @@ variables:
   language_color_filter: ''
   language_size_filter: 'المقاس'
   language_filters: ''
+  spc_search_byname: 'AE'
+  spc_search_byID: 'AEAE'
   language_promotional_filter: ''
   language_add_to_cart_link: 'أضف إلى سلة التسوق'
   add_to_cart_link: 'Add To Bag'
