--- a/tests/behat/templates/variables/brands/pbk/env/uat/markets/ae/languages/ar.yml
+++ b/tests/behat/templates/variables/brands/pbk/env/uat/markets/ae/languages/ar.yml
@@ -1,5 +1,5 @@
 variables:
-  url_base_uri: 'https://www.potterybarn.ae/ar'
+  url_base_uri: 'https://pbkae3-uat.factory.alshaya.com/en'
   ar_collection_filter: ''
   ar_sort_filter: 'رتب حسب'
   ar_price_filter: 'السعر'
