--- a/tests/behat/templates/variables/brands/pbk/env/uat/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/pbk/env/uat/markets/ae/languages/en.yml
@@ -1,5 +1,5 @@
 variables:
-  url_base_uri: 'https://www.potterybarn.ae/en'
+  url_base_uri: 'https://pbkae3-uat.factory.alshaya.com/en'
   collection_filter: ''
   sort_filter: 'sort by'
   price_filter: 'Price'
