--- a/tests/behat/templates/variables/brands/pbk/env/uat/markets/sa/languages/ar.yml
+++ b/tests/behat/templates/variables/brands/pbk/env/uat/markets/sa/languages/ar.yml
@@ -1,5 +1,5 @@
 variables:
-  url_base_uri: 'https://www.potterybarn.com.sa/ar'
+  url_base_uri: 'https://pbksa3-uat.factory.alshaya.com/en'
   language_collection_filter: ''
   language_sort_filter: 'sort by'
   language_price_filter: 'Price'
