--- a/tests/behat/templates/variables/brands/pbk/env/uat/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/pbk/env/uat/markets/sa/languages/en.yml
@@ -1,5 +1,5 @@
 variables:
-  url_base_uri: 'https://www.potterybarn.com.sa/en'
+  url_base_uri: 'https://pbksa3-uat.factory.alshaya.com/en'
   collection_filter: ''
   sort_filter: ''
   price_filter: 'Price'
