CORE-43662: UAT fixes for 6.16.0 release.

--- a/tests/behat/templates/variables/brands/aeo/env/uat/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/aeo/env/uat/markets/sa/languages/en.yml
@@ -1,5 +1,5 @@
 variables:
-  url_base_uri: 'https://aeosa3-uat.factory.alshaya.com/en/'
+  url_base_uri: 'https://aeosa3-uat.factory.alshaya.com/en'
   collection_filter: ''
   sort_filter: 'sort by'
   rice_filter: 'Price'
