--- a/tests/behat/templates/variables/brands/vs/env/uat/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/vs/env/uat/markets/sa/languages/en.yml
@@ -26,7 +26,7 @@ variables:
   ar_filters: 'all filters'
   create_account: 'Create An Account'
   spc_search_byID: 'VSSASSE'
-  spc_search_byname: 'Demi Bra'
+  spc_search_byname: 'Bra'
   sign_in: 'Sign in'
   find_store: 'Find a Store'
   language_link: 'العربية'
@@ -102,7 +102,7 @@ variables:
   continue_shopping_text: 'continue shopping'
   governorate: 'Abha'
   address_area_field: 'Abqaiq'
-  spc_search_keyword: 'lotion'
+  spc_search_keyword: 'bra'
   filter_1: 'attr_actual_color_label_code'
   filter_2: 'attr_size'
   filter_3: 'final_price'
