--- a/tests/behat/templates/variables/brands/vs/env/uat/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/vs/env/uat/markets/ae/languages/en.yml
@@ -93,7 +93,7 @@ variables:
   billing_mobile: '556677888'
   billing_text: 'Billing address:'
   governorate: ''
-  spc_search_keyword: 'sport'
+  spc_search_keyword: 'bra'
   filter_1: 'attr_actual_color_label_code'
   filter_2: 'attr_size'
   filter_3: 'final_price'
@@ -101,5 +101,3 @@ variables:
   language_continue_shopping: 'إليك منتجاتنا المفضلة'
   empty_bag: 'Your shopping bag is empty'
   language_empty_bag: 'حقيبة التسوق الخاصة بك فارغة'
-
-
