--- a/tests/behat/templates/variables/brands/westelm/env/uat/markets/sa/languages/en.yml
+++ b/tests/behat/templates/variables/brands/westelm/env/uat/markets/sa/languages/en.yml
@@ -86,4 +86,4 @@ variables:
   billing_mobile: '556677888'
   billing_text: 'Billing address:'
   governorate: 'Ahmadi'
-  spc_search_keyword: 'cream'
+  spc_search_keyword: 'steel'
