--- a/tests/behat/templates/variables/brands/tbs/env/prod/markets/eg/languages/en.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/prod/markets/eg/languages/en.yml
@@ -91,4 +91,4 @@ variables:
   billing_mobile: '556677888'
   billing_text: 'Billing address:'
   governorate: 'Ahmadi'
-  spc_search_keyword: 'Cream'
+  spc_search_keyword: 'oil'
