--- a/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/prod/markets/kw/languages/en.yml
@@ -89,4 +89,4 @@ variables:
   billing_mobile: '556677888'
   billing_text: 'Billing address:'
   governorate: 'Ahmadi'
-  spc_search_keyword: 'cream'
+  spc_search_keyword: 'oil'
