CORE-000: Fix for error in benefit page, config for brand name and currency code fix for arabic.

--- a/docroot/modules/react/alshaya_hello_member/config/install/language/ar/alshaya_hello_member.settings.yml
+++ b/docroot/modules/react/alshaya_hello_member/config/install/language/ar/alshaya_hello_member.settings.yml
@@ -4,3 +4,4 @@ membership_popup_text_above:
 membership_popup_text_below:
   value: '<p className="hello-membership-terms">انقر هنا لقراءة المزيد عن برنامج</p><p className="hello-membership-terms">انقر هنا لقراءة المزيد عن برنامج</p><p className="hello-membership-terms">انقر هنا لقراءة المزيد عن برنامج</a></p>'
   format: full_text
+brand_membership_text: 'عضوية اتش اند ام'
