--- a/tests/behat/templates/variables/brands/bp/env/uat/markets/kw/languages/en.yml
+++ b/tests/behat/templates/variables/brands/bp/env/uat/markets/kw/languages/en.yml
@@ -1,5 +1,5 @@
 variables:
-  url_base_uri: 'https://bpkw3-uat.factory.alshaya.com/en/'
+  url_base_uri: 'https://bpkw3-uat.factory.alshaya.com/en'
   boots_appointment_page: '/appointment/booking'
   beauty_appointment: 'Beauty and Skin'
   health_appointment: 'Health and Pharmacy'
