--- a/tests/behat/templates/variables/brands/muji/env/uat/markets/ae/languages/en.yml
+++ b/tests/behat/templates/variables/brands/muji/env/uat/markets/ae/languages/en.yml
@@ -1,5 +1,5 @@
 variables:
-  url_base_uri: 'https://muae4-uat.factory.alshaya.com/en/'
+  url_base_uri: 'https://muae4-uat.factory.alshaya.com/en'
   collection_filter: 'Collection'
   sort_filter: 'sort by'
   price_filter: 'Price'
