CORE-45041: Credit-card-changes.

--- a/tests/behat/templates/variables/brands/tbs/env/uat/markets/eg/languages/en.yml
+++ b/tests/behat/templates/variables/brands/tbs/env/uat/markets/eg/languages/en.yml
@@ -17,8 +17,8 @@ variables:
   landmark: 'landmark'
   postal_code: '11835'
   empty_bag: 'Your shopping bag is empty'
-  spc_search_byname: 'Shampoo'
-  spc_search_byID: 'TBKWHDE'
+  spc_search_byname: 'Vitamin'
+  spc_search_byID: 'TBEGHD'
   language_empty_bag: 'حقيبة التسوق الخاصة بك فارغة'
   ar_sort_filter: 'رتب حسب'
   ar_price_filter: 'السعر'
